Lessened the padding on tabs to prevent wrapping

--- a/src/feeddb/feed/static/src/less/custom.less
+++ b/src/feeddb/feed/static/src/less/custom.less
@@ -636,7 +636,7 @@ body { background: url('../../../../../images/satinweave.png'); color: @navy; co
     }
   }
   .Tabs { margin-bottom: 20px;
-    .label-default { background: @gray; background: @gray-alpha; color: @white; color: @white-alpha; padding: 8px 23px; font-size: 14px; font-weight: normal;
+    .label-default { background: @gray; background: @gray-alpha; color: @white; color: @white-alpha; padding: 8px 18px; font-size: 14px; font-weight: normal;
       &:hover { background: @gray; background: @gray-alpha; }
       &.Active { background: @sky-blue; background: @sky-blue-alpha; }
     }
